# NextFlick

./: CMakeLists.txt  CompressedTrie.cpp  CompressedTrie.h  DecisionTree.h  Film.h  GlobalSparset.h  Globals.h  GlobalsHash.h  Media.h  MediaHashTable.cpp  MediaHashTable.h  README.md  Series.h  Ux.cpp  Ux.h  admin.cpp  admin.h  main.cpp  splayTree.cpp  splayTree.h  user.cpp  user.h  users.cpp  users.h
